--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,44 +1,222 @@
 .header {
   padding: 20px 0;
 }
-.nav {
+
+.header-container {
   display: flex;
   justify-content: space-between;
-}
-.nav-logo {
-  display: inline-flex;
   align-items: center;
-  justify-content: center;
+  background-color: #fbfbfb;
+  border: 1px solid #fbfbfb;
+border-radius: 8px;
+width: 335px;
+padding: 4px;
 }
-.nav-list {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
-}
-.nav-link {
-  position: relative;
-  display: block;
+
+.logo {
   font-weight: 500;
-  letter-spacing: 0.02em;
-  transition: 200ms ease-in;
+font-size: 20px;
+letter-spacing: -0.03em;
+color: #1b414b;
 }
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
+
+.burger-button {
+padding: 0;
+border: 0;
+line-height: 0;
+background-color: transparent;
 }
-.nav-link::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%) translateY(100%);
-  width: 110%;
-  height: 4px;
-  border-radius: 4px;
-  transform-origin: center;
-  animation: stretch 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55) 200ms both;
+
+.burger-icon {
+  stroke: #1b414b;
+  fill: none;
 }
-.nav-link.active::after {
-  background: #747bff;
+
+.header-nav-list {
+  display: none;
 }
+
+.header-icon-list {
+ display: none;
+}
+
+
+@media screen and (min-width: 768px) {
+  .header-container {
+    width: 704px;
+  }
+
+  .burger-button {
+    display: none;
+  }
+
+  .header-nav-list {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 8px;
+  }
+
+  .header-nav-list {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: row;
+   gap: 4px;
+  }
+
+  .header-nav-list-item {
+    min-width: 91px;
+    border-radius: 8px;
+    background-color: rgba(27, 65, 75, 0.5);;
+    padding: 15px 25px;
+    color: #fbfbfb;
+    font-weight: 400;
+font-size: 9px;
+line-height: 1.3;
+text-transform: uppercase;
+text-align: center;
+  }
+  
+  .header-nav-list-item:first-child {
+    background-color: #1b414b;
+  }
+
+  .header-icon-list {
+    display: inline;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    fill: #1b414b;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header-container {
+    width: 1080px;
+  }
+
+  .header-nav-list {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 8px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header-container {
+    width: 1240px;
+  }
+
+  .header-nav-list {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 8px;
+  }
+}
+
+/* mobile-menu */
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999999;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  background-color: #0E1823;
+}
+
+.mobile-menu.is-open {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.mobile-menu-container {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: space-between;
+padding: 16px 20px 40px;
+}
+
+
+.mobile-logo-container {
+  border: 1px solid #fbfbfb;
+  border-radius: 8px;
+  width: 280px;
+  background: #fbfbfb;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 20px;
+  margin-bottom: 150px;
+box-sizing: border-box;
+}
+
+.menu-logo {
+  font-weight: 500;
+font-size: 14px;
+letter-spacing: -0.03em;
+color: #1b414b;
+}
+
+.menu-close-btn {
+padding: 0;
+border: 0;
+line-height: 0;
+background-color: transparent;
+}
+
+.close-icon {
+  fill: #055545;
+  stroke: none;
+}
+
+.menu-nav-list {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   gap: 4px;
+   margin-bottom: 250px;
+}
+
+.menu-nav-list-item {
+  font-weight: 400;
+font-size: 9px;
+line-height: 1.3;
+text-transform: uppercase;
+text-align: center;
+color: #fbfbfb;
+border-radius: 8px;
+width: 91px;
+padding: 15px 25px;
+background-color: rgba(27, 65, 75, 0.5);
+}
+
+.menu-nav-list-item:first-child {
+  background-color: #1b414b;
+}
+
+
+
+.menu-icon-list {
+  /* margin-top: auto; */
+    display: inline;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    fill: #1b414b;
+}
+
+.menu-icon {
+  fill: #fbfbfb;
+  stroke: none;
+}
+
+
